# moonshine-remote-sensing

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  docs_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: lint_python.yml  test_python.yml
docs/source/: api.rst  conf.py  index.md  index.rst  models.rst  usage.rst
docs/source/_examples/: building_footprint_challenge.ipynb
docs/source/_static/css/: custom.css
docs/source/_templates/sidebar/: brand.html
docs/source/api_reference/: moonshine.models.rst  moonshine.preprocessing.rst  moonshine.rst
docs/source/getting_started/: models.md  preprocessing.md  quick_start.md
examples/building_footprints/: .gitignore  building_footprint_challenge.ipynb  generate_masks.py  prepare_data.sh  requirements.txt  utils.py
moonshine/: __init__.py
moonshine/models/: BUILD  __init__.py  base.py  logging.py  model_parameters.py  unet.py  unet_test.py
moonshine/preprocessing/: __init__.py  preprocess.py  preprocess_test.py  settings.py
