[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonshine"
version = "0.1.5"
authors = [
    {name = "Nate Harada", email = "moonshine@moonshinelabs.ai"},
]
description = "Pretrained remote sensing models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["moonshine", "remote", "sensing", "satellite"]
license = {text = "MIT"}
dependencies = ["segmentation-models-pytorch==0.3.2", "smart_open[s3]==6.3.0"]

[project.urls]
Homepage = "https://github.com/moonshinelabs/moonshine"